--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.14.0",
     "jade": "^1.11.0",
     "node-cmd": "^3.0.0",
-    "node-ssh": "^5.1.2"
+    "node-ssh": "^5.1.2",
+    "npm-git-install": "^0.3.0"
   }
 }
